--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
           <i class="bx bx-map"></i>
           <h3>Reach Out Here</h3><br>
         <a href="https://www.linkedin.com/in/ananya-sood-9562191b5?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BGGWj103rQZOjyTcdgzu7qQ%3D%3D" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
+        <a href="https://github.com/asood0113" class="github"><i class="bx bxl-github"></i></a>  
+      </div>
       </div>
       <div class="col-lg-6">
         <div class="info-box mb-4">
